file name update

--- a/notebooks/in_vehicle_coupon_recommendation.ipynb
+++ b/notebooks/in_vehicle_coupon_recommendation.ipynb
@@ -42,20 +42,20 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "414fdfd1",
+   "id": "53a99282",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "import in_vehicle_coupon_prediction as icp\n",
+    "import in_vehicle_coupon_prediction as icr\n",
     "from in_vehicle_coupon_prediction import p, rcp, rpp, rcr, sr, pl, pdc, save_and_return_data_frame, initialize_custom_notebook_settings"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0e4cad95",
+   "id": "0e83b9af",
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b00b9cc",
+   "id": "93353c01",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1083,7 +1083,7 @@
     "#get column name list for column values uniques that are the same as column name 'CarryAway' value uniques\n",
     "column_name_list_same_unique_values = []\n",
     "for column_name in df.columns:    \n",
-    "    value = icp.column_name_value_sets_equal(df, column_name1='CarryAway', column_name2=column_name)\n",
+    "    value = icr.column_name_value_sets_equal(df, column_name1='CarryAway', column_name2=column_name)\n",
     "    if value == 1:\n",
     "        column_name_list_same_unique_values = column_name_list_same_unique_values + [column_name]\n",
     "#rename values in columns 'Bar', 'CoffeeHouse', 'CarryAway', 'RestaurantLessThan20', and 'Restaurant20To50' to math language\n",
@@ -1118,7 +1118,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "13bab662",
+   "id": "c865b041",
    "metadata": {},
    "outputs": [
     {
@@ -1166,7 +1166,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "3845526d",
+   "id": "338f247f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1195,7 +1195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0473998d",
+   "id": "d60c76ad",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1203,7 +1203,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5c73642f",
+   "id": "e0ee1da8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1213,7 +1213,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "80667768",
+   "id": "ab6c9718",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2301,7 +2301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d9c52ad",
+   "id": "a2e9ba83",
    "metadata": {},
    "source": [
     "<font size=\"5\"><a id='[Data_Preprocessing]'></a> </font> <font>Table of Contents</font> <font size=\"2\">[Data Wrangling](#[Data_Wrangling])</font> <font size=\"2\">[Feature Engineering](#[Feature_Engineering])</font> <font size=\"2\">[Data Preprocessing](#[Data_Preprocessing])</font> <font size=\"2\">[Modeling](#[Modeling])</font> <font size=\"2\">[Results](#[Results])</font>"
@@ -2309,7 +2309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0669eddf",
+   "id": "ac6d3565",
    "metadata": {},
    "source": [
     "<font size=\"6\"><a id='[Data_Preprocessing]'>**Data Preprocessing**</a> </font>"
@@ -2318,7 +2318,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "b0efe6ce",
+   "id": "1a97be11",
    "metadata": {
     "scrolled": false
    },
@@ -4328,7 +4328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a15a70c",
+   "id": "3f9ece1a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4336,7 +4336,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "71581dee",
+   "id": "43eae5e7",
    "metadata": {},
    "outputs": [
     {
@@ -6334,7 +6334,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "c1e9aeb1",
+   "id": "54f64d71",
    "metadata": {},
    "outputs": [
     {
@@ -6439,7 +6439,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "62c4d9dd",
+   "id": "d7dd9c0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6449,7 +6449,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "36d7739e",
+   "id": "d4bc5a45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6467,7 +6467,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "5e8ea7f5",
+   "id": "3339daab",
    "metadata": {},
    "outputs": [
     {
@@ -8460,7 +8460,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "60e121aa",
+   "id": "e7162590",
    "metadata": {},
    "outputs": [
     {
@@ -8478,7 +8478,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "390288f2",
+   "id": "fe33b020",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -8486,7 +8486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "947d3375",
+   "id": "55c99e21",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -8494,7 +8494,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00dcd860",
+   "id": "ab6190e6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -8509,7 +8509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93a6f7c1",
+   "id": "96e515cd",
    "metadata": {},
    "source": [
     "<font size=\"5\"><a id='[Modeling]'></a> </font> <font>Table of Contents</font> <font size=\"2\">[Data Wrangling](#[Data_Wrangling])</font> <font size=\"2\">[Feature Engineering](#[Feature_Engineering])</font> <font size=\"2\">[Data Preprocessing](#[Data_Preprocessing])</font> <font size=\"2\">[Modeling](#[Modeling])</font> <font size=\"2\">[Results](#[Results])</font>"
@@ -8517,7 +8517,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd7bc9ec",
+   "id": "48685362",
    "metadata": {},
    "source": [
     "<font size=\"6\"><a id='[Modeling]'>**Modeling**</a> </font>"
@@ -8526,7 +8526,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cafb6089",
+   "id": "71109aaf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8537,7 +8537,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33778c4c",
+   "id": "43f61246",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -8545,7 +8545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41249db3",
+   "id": "c4831f88",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -8553,7 +8553,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e64cb37f",
+   "id": "21e89c60",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -8599,7 +8599,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e2f95b5",
+   "id": "c4043add",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -8607,14 +8607,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f467eb9",
+   "id": "1e06c77b",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "c04106e9",
+   "id": "b33a3871",
    "metadata": {},
    "source": [
     "<font size=\"5\"><a id='[Results]'></a> </font> <font>Table of Contents</font> <font size=\"2\">[Data Wrangling](#[Data_Wrangling])</font> <font size=\"2\">[Feature Engineering](#[Feature_Engineering])</font> <font size=\"2\">[Data Preprocessing](#[Data_Preprocessing])</font> <font size=\"2\">[Modeling](#[Modeling])</font> <font size=\"2\">[Results](#[Results])</font>"
@@ -8622,7 +8622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8799d55d",
+   "id": "1f3d3fa6",
    "metadata": {},
    "source": [
     "<font size=\"6\"><a id='[Results]'>**Results**</a> </font>"
@@ -8647,7 +8647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65043d47",
+   "id": "1a06f2cd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -8655,7 +8655,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8418bfe7",
+   "id": "e0191bf5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -8663,7 +8663,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c67b860",
+   "id": "3f0a7b0e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -8671,7 +8671,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04836f51",
+   "id": "37dcfdfe",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -8679,7 +8679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f0512fc",
+   "id": "97ab3601",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -8687,7 +8687,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcde255d",
+   "id": "f199afc9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -8695,7 +8695,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2631e2ff",
+   "id": "ae09079d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -8703,7 +8703,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3901af4",
+   "id": "7f0b3186",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -8711,7 +8711,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1dc76542",
+   "id": "d9e95754",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -8719,7 +8719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9f71c94",
+   "id": "3c1ad647",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -8727,7 +8727,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b672433",
+   "id": "e7bca138",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -8735,7 +8735,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "320505be",
+   "id": "a87e32cc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -8743,7 +8743,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49d7b1b8",
+   "id": "3c5f88e0",
    "metadata": {},
    "outputs": [],
    "source": []
