--- a/notebooks/in_vehicle_coupon_recommendation_hyperparameter_tuning_v2.5.ipynb
+++ b/notebooks/in_vehicle_coupon_recommendation_hyperparameter_tuning_v2.5.ipynb
@@ -8587,7 +8587,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "e50a9c84",
+   "id": "c7386d91",
    "metadata": {},
    "outputs": [
     {
@@ -8608,7 +8608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d70561d7",
+   "id": "428fd360",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -9075,6 +9075,121 @@
       "[CV] END bootstrap=False, criterion=gini, max_depth=5, min_samples_leaf=3, min_samples_split=20, n_estimators=200; total time=   1.0s\n",
       "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=1, min_samples_split=2, n_estimators=200; total time=   1.6s\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV] END bootstrap=False, criterion=gini, max_depth=5, min_samples_leaf=2, min_samples_split=7, n_estimators=200; total time=   1.0s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=5, min_samples_leaf=2, min_samples_split=15, n_estimators=200; total time=   1.0s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=5, min_samples_leaf=2, min_samples_split=20, n_estimators=200; total time=   1.0s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=5, min_samples_leaf=3, min_samples_split=3, n_estimators=200; total time=   1.0s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=5, min_samples_leaf=3, min_samples_split=5, n_estimators=200; total time=   1.0s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=5, min_samples_leaf=3, min_samples_split=6, n_estimators=200; total time=   1.0s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=5, min_samples_leaf=3, min_samples_split=8, n_estimators=200; total time=   1.1s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=5, min_samples_leaf=3, min_samples_split=9, n_estimators=200; total time=   1.0s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=5, min_samples_leaf=3, min_samples_split=15, n_estimators=200; total time=   1.0s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=5, min_samples_leaf=3, min_samples_split=20, n_estimators=200; total time=   1.0s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=1, min_samples_split=2, n_estimators=200; total time=   1.5s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=1, min_samples_split=3, n_estimators=200; total time=   1.7s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=1, min_samples_split=4, n_estimators=200; total time=   1.8s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=1, min_samples_split=5, n_estimators=200; total time=   2.1s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=1, min_samples_split=7, n_estimators=200; total time=   2.3s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=1, min_samples_split=9, n_estimators=200; total time=   2.4s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=1, min_samples_split=10, n_estimators=200; total time=   2.1s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=1, min_samples_split=20, n_estimators=200; total time=   2.1s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=2, min_samples_split=2, n_estimators=200; total time=   2.2s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=2, min_samples_split=4, n_estimators=200; total time=   2.0s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=2, min_samples_split=5, n_estimators=200; total time=   2.2s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=2, min_samples_split=7, n_estimators=200; total time=   2.2s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=2, min_samples_split=9, n_estimators=200; total time=   2.2s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=2, min_samples_split=10, n_estimators=200; total time=   2.3s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=2, min_samples_split=20, n_estimators=200; total time=   2.0s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=3, min_samples_split=3, n_estimators=200; total time=   2.0s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=3, min_samples_split=4, n_estimators=200; total time=   2.0s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=3, min_samples_split=6, n_estimators=200; total time=   1.9s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=3, min_samples_split=8, n_estimators=200; total time=   1.9s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=3, min_samples_split=9, n_estimators=200; total time=   1.9s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=3, min_samples_split=15, n_estimators=200; total time=   1.8s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=20, min_samples_leaf=1, min_samples_split=2, n_estimators=200; total time=   3.7s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=1, min_samples_split=3, n_estimators=200; total time=   1.8s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=1, min_samples_split=6, n_estimators=200; total time=   2.3s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=1, min_samples_split=8, n_estimators=200; total time=   2.3s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=1, min_samples_split=9, n_estimators=200; total time=   2.4s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=1, min_samples_split=15, n_estimators=200; total time=   2.0s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=1, min_samples_split=20, n_estimators=200; total time=   1.9s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=2, min_samples_split=3, n_estimators=200; total time=   2.2s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=2, min_samples_split=4, n_estimators=200; total time=   2.1s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=2, min_samples_split=6, n_estimators=200; total time=   2.3s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=2, min_samples_split=8, n_estimators=200; total time=   2.2s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=2, min_samples_split=9, n_estimators=200; total time=   2.0s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=2, min_samples_split=15, n_estimators=200; total time=   2.3s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=3, min_samples_split=2, n_estimators=200; total time=   2.1s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=3, min_samples_split=3, n_estimators=200; total time=   2.0s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=3, min_samples_split=5, n_estimators=200; total time=   1.9s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=3, min_samples_split=6, n_estimators=200; total time=   1.9s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=3, min_samples_split=8, n_estimators=200; total time=   1.9s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=3, min_samples_split=10, n_estimators=200; total time=   1.9s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=3, min_samples_split=15, n_estimators=200; total time=   1.8s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=20, min_samples_leaf=1, min_samples_split=2, n_estimators=200; total time=   3.8s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=1, min_samples_split=4, n_estimators=200; total time=   1.8s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=1, min_samples_split=6, n_estimators=200; total time=   2.3s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=1, min_samples_split=8, n_estimators=200; total time=   2.2s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=1, min_samples_split=10, n_estimators=200; total time=   2.5s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=1, min_samples_split=15, n_estimators=200; total time=   2.0s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=2, min_samples_split=2, n_estimators=200; total time=   2.1s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=2, min_samples_split=3, n_estimators=200; total time=   2.3s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=2, min_samples_split=5, n_estimators=200; total time=   2.2s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=2, min_samples_split=7, n_estimators=200; total time=   2.3s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=2, min_samples_split=8, n_estimators=200; total time=   2.1s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=2, min_samples_split=10, n_estimators=200; total time=   2.2s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=2, min_samples_split=15, n_estimators=200; total time=   2.1s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=3, min_samples_split=2, n_estimators=200; total time=   2.2s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=3, min_samples_split=4, n_estimators=200; total time=   1.9s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=3, min_samples_split=5, n_estimators=200; total time=   1.9s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=3, min_samples_split=7, n_estimators=200; total time=   1.9s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=3, min_samples_split=8, n_estimators=200; total time=   1.9s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=3, min_samples_split=10, n_estimators=200; total time=   1.9s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=3, min_samples_split=20, n_estimators=200; total time=   1.8s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=20, min_samples_leaf=1, min_samples_split=2, n_estimators=200; total time=   3.8s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV] END bootstrap=False, criterion=gini, max_depth=5, min_samples_leaf=3, min_samples_split=20, n_estimators=200; total time=   0.9s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=1, min_samples_split=3, n_estimators=200; total time=   1.6s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=1, min_samples_split=4, n_estimators=200; total time=   1.8s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=1, min_samples_split=5, n_estimators=200; total time=   2.0s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=1, min_samples_split=7, n_estimators=200; total time=   2.3s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=1, min_samples_split=8, n_estimators=200; total time=   2.4s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=1, min_samples_split=10, n_estimators=200; total time=   2.1s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=1, min_samples_split=20, n_estimators=200; total time=   2.0s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=2, min_samples_split=2, n_estimators=200; total time=   2.1s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=2, min_samples_split=4, n_estimators=200; total time=   2.1s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=2, min_samples_split=6, n_estimators=200; total time=   2.1s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=2, min_samples_split=7, n_estimators=200; total time=   2.2s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=2, min_samples_split=9, n_estimators=200; total time=   2.1s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=2, min_samples_split=10, n_estimators=200; total time=   2.2s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=2, min_samples_split=20, n_estimators=200; total time=   2.1s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=3, min_samples_split=2, n_estimators=200; total time=   2.0s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=3, min_samples_split=4, n_estimators=200; total time=   1.9s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=3, min_samples_split=6, n_estimators=200; total time=   1.9s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=3, min_samples_split=7, n_estimators=200; total time=   1.9s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=3, min_samples_split=9, n_estimators=200; total time=   1.9s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=3, min_samples_split=10, n_estimators=200; total time=   1.9s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=10, min_samples_leaf=3, min_samples_split=20, n_estimators=200; total time=   1.8s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=20, min_samples_leaf=1, min_samples_split=3, n_estimators=200; total time=   3.7s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=20, min_samples_leaf=1, min_samples_split=4, n_estimators=200; total time=   3.4s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=20, min_samples_leaf=1, min_samples_split=5, n_estimators=200; total time=   3.4s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=20, min_samples_leaf=1, min_samples_split=7, n_estimators=200; total time=   3.2s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=20, min_samples_leaf=1, min_samples_split=9, n_estimators=200; total time=   3.0s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=20, min_samples_leaf=1, min_samples_split=10, n_estimators=200; total time=   3.0s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=20, min_samples_leaf=1, min_samples_split=20, n_estimators=200; total time=   2.7s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=20, min_samples_leaf=2, min_samples_split=2, n_estimators=200; total time=   3.3s\n",
+      "[CV] END bootstrap=False, criterion=gini, max_depth=20, min_samples_leaf=2, min_samples_split=4, n_estimators=200; total time=   3.3s\n"
+     ]
     }
    ],
    "source": [
@@ -9144,7 +9259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae5775f4",
+   "id": "77b40f83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9154,7 +9269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ede49410",
+   "id": "61d50402",
    "metadata": {
     "scrolled": true
    },
@@ -9166,7 +9281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c9dbe3e",
+   "id": "1103d4a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9176,7 +9291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9247deb",
+   "id": "e9f17054",
    "metadata": {},
    "outputs": [],
    "source": []
