--- a/notebooks/in_vehicle_coupon_recommendation_v2dot5_118_features.ipynb
+++ b/notebooks/in_vehicle_coupon_recommendation_v2dot5_118_features.ipynb
@@ -25,8 +25,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#import sys\n",
-    "#sys.path.append(\"/Users/pauljacob/Library/Python/3.8/lib/python/site-packages\")"
+    "import sys\n",
+    "sys.path.append(\"/Users/pauljacob/Library/Python/3.8/lib/python/site-packages\")"
    ]
   },
   {
@@ -49,7 +49,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 0 ns (started: 2022-10-14 17:14:09 -07:00)\n"
+      "time: 328 µs (started: 2022-10-14 23:59:03 -07:00)\n"
      ]
     }
    ],
@@ -67,26 +67,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: cookiecutter in c:\\users\\paul\\anaconda3\\lib\\site-packages (1.7.3)\n",
-      "Requirement already satisfied: six>=1.10 in c:\\users\\paul\\anaconda3\\lib\\site-packages (from cookiecutter) (1.16.0)\n",
-      "Requirement already satisfied: Jinja2<4.0.0,>=2.7 in c:\\users\\paul\\anaconda3\\lib\\site-packages (from cookiecutter) (2.11.3)\n",
-      "Requirement already satisfied: poyo>=0.5.0 in c:\\users\\paul\\anaconda3\\lib\\site-packages (from cookiecutter) (0.5.0)\n",
-      "Requirement already satisfied: jinja2-time>=0.2.0 in c:\\users\\paul\\anaconda3\\lib\\site-packages (from cookiecutter) (0.2.0)\n",
-      "Requirement already satisfied: binaryornot>=0.4.4 in c:\\users\\paul\\anaconda3\\lib\\site-packages (from cookiecutter) (0.4.4)\n",
-      "Requirement already satisfied: click>=7.0 in c:\\users\\paul\\anaconda3\\lib\\site-packages (from cookiecutter) (8.0.4)\n",
-      "Requirement already satisfied: python-slugify>=4.0.0 in c:\\users\\paul\\anaconda3\\lib\\site-packages (from cookiecutter) (5.0.2)\n",
-      "Requirement already satisfied: requests>=2.23.0 in c:\\users\\paul\\anaconda3\\lib\\site-packages (from cookiecutter) (2.27.1)\n",
-      "Requirement already satisfied: chardet>=3.0.2 in c:\\users\\paul\\anaconda3\\lib\\site-packages (from binaryornot>=0.4.4->cookiecutter) (4.0.0)\n",
-      "Requirement already satisfied: colorama in c:\\users\\paul\\anaconda3\\lib\\site-packages (from click>=7.0->cookiecutter) (0.4.4)\n",
-      "Requirement already satisfied: MarkupSafe>=0.23 in c:\\users\\paul\\anaconda3\\lib\\site-packages (from Jinja2<4.0.0,>=2.7->cookiecutter) (2.0.1)\n",
-      "Requirement already satisfied: arrow in c:\\users\\paul\\anaconda3\\lib\\site-packages (from jinja2-time>=0.2.0->cookiecutter) (1.2.2)\n",
-      "Requirement already satisfied: text-unidecode>=1.3 in c:\\users\\paul\\anaconda3\\lib\\site-packages (from python-slugify>=4.0.0->cookiecutter) (1.3)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\paul\\anaconda3\\lib\\site-packages (from requests>=2.23.0->cookiecutter) (3.3)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\paul\\anaconda3\\lib\\site-packages (from requests>=2.23.0->cookiecutter) (1.26.9)\n",
-      "Requirement already satisfied: charset-normalizer~=2.0.0 in c:\\users\\paul\\anaconda3\\lib\\site-packages (from requests>=2.23.0->cookiecutter) (2.0.4)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\paul\\anaconda3\\lib\\site-packages (from requests>=2.23.0->cookiecutter) (2021.10.8)\n",
-      "Requirement already satisfied: python-dateutil>=2.7.0 in c:\\users\\paul\\anaconda3\\lib\\site-packages (from arrow->jinja2-time>=0.2.0->cookiecutter) (2.8.2)\n",
-      "time: 3.25 s (started: 2022-10-14 17:14:09 -07:00)\n"
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: cookiecutter in /Users/pauljacob/Library/Python/3.8/lib/python/site-packages (2.1.1)\n",
+      "Requirement already satisfied: python-slugify>=4.0.0 in /Users/pauljacob/Library/Python/3.8/lib/python/site-packages (from cookiecutter) (6.1.2)\n",
+      "Requirement already satisfied: jinja2-time>=0.2.0 in /Users/pauljacob/Library/Python/3.8/lib/python/site-packages (from cookiecutter) (0.2.0)\n",
+      "Requirement already satisfied: requests>=2.23.0 in /Users/pauljacob/Library/Python/3.8/lib/python/site-packages (from cookiecutter) (2.28.1)\n",
+      "Requirement already satisfied: Jinja2<4.0.0,>=2.7 in /Users/pauljacob/Library/Python/3.8/lib/python/site-packages (from cookiecutter) (3.1.2)\n",
+      "Requirement already satisfied: binaryornot>=0.4.4 in /Users/pauljacob/Library/Python/3.8/lib/python/site-packages (from cookiecutter) (0.4.4)\n",
+      "Requirement already satisfied: click<9.0.0,>=7.0 in /Users/pauljacob/Library/Python/3.8/lib/python/site-packages (from cookiecutter) (8.1.3)\n",
+      "Requirement already satisfied: pyyaml>=5.3.1 in /Users/pauljacob/Library/Python/3.8/lib/python/site-packages (from cookiecutter) (6.0)\n",
+      "Requirement already satisfied: chardet>=3.0.2 in /Users/pauljacob/Library/Python/3.8/lib/python/site-packages (from binaryornot>=0.4.4->cookiecutter) (5.0.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in /Users/pauljacob/Library/Python/3.8/lib/python/site-packages (from Jinja2<4.0.0,>=2.7->cookiecutter) (2.1.1)\n",
+      "Requirement already satisfied: arrow in /Users/pauljacob/Library/Python/3.8/lib/python/site-packages (from jinja2-time>=0.2.0->cookiecutter) (1.2.3)\n",
+      "Requirement already satisfied: text-unidecode>=1.3 in /Users/pauljacob/Library/Python/3.8/lib/python/site-packages (from python-slugify>=4.0.0->cookiecutter) (1.3)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/pauljacob/Library/Python/3.8/lib/python/site-packages (from requests>=2.23.0->cookiecutter) (3.4)\n",
+      "Requirement already satisfied: charset-normalizer<3,>=2 in /Users/pauljacob/Library/Python/3.8/lib/python/site-packages (from requests>=2.23.0->cookiecutter) (2.1.1)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/pauljacob/Library/Python/3.8/lib/python/site-packages (from requests>=2.23.0->cookiecutter) (1.26.12)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/pauljacob/Library/Python/3.8/lib/python/site-packages (from requests>=2.23.0->cookiecutter) (2022.9.24)\n",
+      "Requirement already satisfied: python-dateutil>=2.7.0 in /Users/pauljacob/Library/Python/3.8/lib/python/site-packages (from arrow->jinja2-time>=0.2.0->cookiecutter) (2.8.2)\n",
+      "Requirement already satisfied: six>=1.5 in /Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.8/lib/python3.8/site-packages (from python-dateutil>=2.7.0->arrow->jinja2-time>=0.2.0->cookiecutter) (1.15.0)\n",
+      "time: 1.25 s (started: 2022-10-14 23:59:03 -07:00)\n"
      ]
     }
    ],
@@ -106,7 +106,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 438 ms (started: 2022-10-14 17:14:12 -07:00)\n"
+      "time: 587 ms (started: 2022-10-14 23:59:04 -07:00)\n"
      ]
     }
    ],
@@ -137,7 +137,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 16 ms (started: 2022-10-14 17:14:13 -07:00)\n"
+      "time: 5.59 ms (started: 2022-10-14 23:59:05 -07:00)\n"
      ]
     }
    ],
